# shushhh

./: .gitignore  AGENT.md  CMakeLists.txt  Main.cpp  PROJECT_BIBLE.md  ProjectOverview.md  README.md  TRACKER.md  create_usb.py  shushhh_project_overview.docx
android/: .gitignore  README.md  build_libs.ps1  download_tor.ps1  gradlew.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: app.js  index.html  style.css
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  tor_manager.cpp  tor_manager.h  watchdog_android.cpp  watchdog_android.h
android/app/src/main/cpp/auth/: auth.cpp
android/app/src/main/cpp/crypto/: crypto.cpp
android/app/src/main/cpp/include/oqs/: oqsconfig.h
android/app/src/main/cpp/include/sodium/: version.h
android/app/src/main/java/com/shushhh/app/: MainActivity.java  NativeBridge.java  UsbReceiver.java  UsbWatchdogService.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml  usb_device_filter.xml
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
relay/: key_server.py  keyserver.db  msg_server.py  relay_server.py  requirements.txt  setup_keys.py  telemetry.db
src/auth/: auth.cpp  auth.h
src/crypto/: crypto.cpp  crypto.h
src/installer/: Installer.cpp  resource_ids.h
src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp
src/watchdog/: watchdog.cpp  watchdog.h
